Fix alignment issue in DSFR by adjusting flex properties for fieldset elements (select and input in same row)

--- a/aidants_connect_common/static/scss/main.scss
+++ b/aidants_connect_common/static/scss/main.scss
@@ -243,3 +243,8 @@ summary::marker {
 .fr-input-otp-token {
   max-width: calc(6ch + 2rem);
 }
+
+// Fix DSFR alignment issue between select and input in same row
+.fr-fieldset {
+  align-items: flex-start;
+}
